# jarvis

./: .gitignore  README  basic_ui.py  ingestion_pipeline.py  journal.py  pyproject.toml  requirements.txt  retrieval_pipeline.py  tools.json
anotações/: coisas do trabalho.txt
jarvis_env/: pyvenv.cfg
jarvis_env/Scripts/: activate  activate.bat
skills/: SKILL.md
skills/generate-worksheet/: SKILL.md
skills/retrieval-pipeline-tools/: SKILL.md
