[project]
name = "jarvis-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
]
